welcome.lessons.welcome.array.search.AverageValue.scala.error
averageValue:4: error: not found: value sommme
    sommme = somme + nums(i)
    ^