welcome.lessons.welcome.array.search.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
  var somme:Int=0
  for(i<-0 to nums.length){
    sommme = somme + nums(i)
  }
  return somme/nums.length
}